Version 13     2015-February-5

--Added a color blind mode with adjustable color hue shifts (so that color
  blind individuals can tweak their own color settings).

--Fixed to clear last pending flying bet after it is no longer needed (so it
  doesn't show up next round or next game). 

--Changed protocol so that a leaving opponent's remaining chip balance is still
  shown.  Thus, we can compute true house tribute even after opponent leaves.

--Added a musicLoudness setting.

--Changed protocol so that server tells client leave penalty, and client
  displays it to the leaver.

--You can now mouse over uncolored squares, if no pick is pending, and see what
  would happen if you won that square for yourself.  Thus, for example, you
  have the same mouse-over information availble during the current betting
  step that you would have during the next picking step (thanks Jere).

--Moved column picker starting positions out more so that they don't intersect
  with clicked-mouseover-cell column markers.

--Fixed so that DB password isn't leaked in PHP stack traces (thanks Jere).




Version 12     Live Server Fixes

--Fixed precision bug in computing house balance change after tournament
  prizes are paid.

--Changed so that the buy-in for a tournament match isn't counted against your
  profit stat until the match ends (matches that go over deadline simply don't
  count instead of counting as a profit loss for both players).

--Fixed a bug in pairwise tournament feeding blocking so that it only blocks
  based on current tournament pairwise profits.

--Fixed prize calculations to handle settings where every player gets a prize.

--Added entry fee and prize pool display to tournament prize list.

--Fixed active users graph to filter out duplicates.

--Fixed tournament so that tied players split the total prize sum at their
  prize levels (thanks Josh C).

--Fixed tournament stats to not uptick game count for a player until game is