@@ -1,3 +1,12 @@
+Version 14
+
+--Fixed bug in mousing over uncolored squares that was not properly removing that column from the possibility space when computing possible opponent scores.
+
+--Improved green score graph behavior when there is only one column left and it must be given to your opponent (before, the graph behaved as if your opponent didn't know their final column if you hadn't assigned it yet but had assigned the final green column, which implies the final red column by elimination).
+
+
+
+
 Version 13     2015-February-5
 
 --Added a color blind mode with adjustable color hue shifts (so that color
